Fix layout issue

--- a/src/app/printer-status/printer-status.component.scss
+++ b/src/app/printer-status/printer-status.component.scss
@@ -24,7 +24,7 @@
     }
 
     &-1 {
-        width: 27vw;
+        width: 29vw;
         padding-left: 1vw;
         padding-right: 8.5vw;
     }
